{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 19,
  "lineage": "5f9c5927-5d3a-c77c-a8c8-42e2aa44b276",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "glps_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:internet-gateway/igw-0031cbc283d3fa67d",
            "id": "igw-0031cbc283d3fa67d",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps_dev-igw"
            },
            "tags_all": {
              "Name": "glps_dev-igw"
            },
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "glps_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/alb/c2c35ae998e70f64",
            "arn_suffix": "app/alb/c2c35ae998e70f64",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-807905489.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/alb/c2c35ae998e70f64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0173b3e667d2dba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b1223d6cb5ace9c"
              },
              {
                "subnet_id": "subnet-0f1bd373bea7fbe65"
              }
            ],
            "subnets": [
              "subnet-00b1223d6cb5ace9c",
              "subnet-0f1bd373bea7fbe65"
            ],
            "vpc_id": "vpc-02fabf01ec92b8e1e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.glps_alb_sg",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "glps_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/alb/c2c35ae998e70f64/5b9ca3fed1544017",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/glps-tg/a1a861627b4a22bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/alb/c2c35ae998e70f64/5b9ca3fed1544017",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/alb/c2c35ae998e70f64",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.glps_alb",
            "aws_lb_target_group.glps_tg",
            "aws_security_group.glps_alb_sg",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "glps_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/glps-tg/a1a861627b4a22bd",
            "arn_suffix": "targetgroup/glps-tg/a1a861627b4a22bd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/glps-tg/a1a861627b4a22bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "glps-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "glps_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-07008e9a85cf77bd3",
            "id": "rtb-07008e9a85cf77bd3",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0031cbc283d3fa67d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.glps_igw",
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "glps_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4e68fba1d2370be",
            "route_table_id": "rtb-07008e9a85cf77bd3",
            "subnet_id": "subnet-00b1223d6cb5ace9c"
          },
          "dependencies": [
            "aws_internet_gateway.glps_igw",
            "aws_route_table.glps_rt",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c95d7d87180b1733",
            "route_table_id": "rtb-07008e9a85cf77bd3",
            "subnet_id": "subnet-0f1bd373bea7fbe65"
          },
          "dependencies": [
            "aws_internet_gateway.glps_igw",
            "aws_route_table.glps_rt",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "glps_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0c0173b3e667d2dba",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0173b3e667d2dba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "glps_dev-alb-sg"
            },
            "tags_all": {
              "Name": "glps_dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "glps_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-00b1223d6cb5ace9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1223d6cb5ace9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps_dev-subnet-0"
            },
            "tags_all": {
              "Name": "glps_dev-subnet-0"
            },
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "dependencies": [
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0f1bd373bea7fbe65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1bd373bea7fbe65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps_dev-subnet-1"
            },
            "tags_all": {
              "Name": "glps_dev-subnet-1"
            },
            "vpc_id": "vpc-02fabf01ec92b8e1e"
          },
          "dependencies": [
            "aws_vpc.glps_vpc",
            "data.aws_availability_zones.list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "glps_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:vpc/vpc-02fabf01ec92b8e1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0ed7a9b85304a9a7d",
            "default_route_table_id": "rtb-05398bc13de2d73de",
            "default_security_group_id": "sg-00328d4db5b048104",
            "dhcp_options_id": "dopt-003721dbdea12b4ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02fabf01ec92b8e1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05398bc13de2d73de",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps_dev-vpc"
            },
            "tags_all": {
              "Name": "glps_dev-vpc"
            }
          }
        }
      ]
    }
  ]
}